--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.5.5",
+    "mongoose": "^5.9.16",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.6",
     "nodemon": "^2.0.3",
+    "pdf-image": "^2.0.0",
+    "pdf-parse": "^1.1.1",
+    "pdf2html": "^2.5.2",
+    "pdftohtmljs": "^0.6.0",
     "uuid": "^3.3.2"
   }
 }
